# quick-logger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
Releases/: quick_datalog-0.1.0-py3-none-any.whl
quick_logger/: __init__.py  asynclog.py  core.py
