# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-datalog"  # 包名（小写+短横线）
version = "0.1.0"
authors = [{"name"= "huyuenshen", "email"= "huyunshen@163.com"}]
description = "A lightweight colorful log module with exception capture"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"