# setup.cfg
[metadata]
name = quick-datalog
version = 0.1.0
author = huyuenshen
author_email = huyuenshen@163.com
description = A lightweight colorful log module with exception capture
long_description = file: README.md  # 可新建README.md写详细说明
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = .